2012-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20070724-1.c:
	  Disabled test on gcc older than 5.0.

2012-10-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20050613-1.c:
	  Disable a test for mcs51, where it fails for stack-auto.

2012-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20060929-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c:
	  Disable tests on gcc older than 5.0.

2012-10-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20060930-2.c:
	  Fixed bug #3577673.
	* support/regression/tests/gcc-torture-execute-20060127-1.c,
	  support/regression/tests/gcc-torture-execute-20060110-2.c:
	  Note that these are affected by lack of support for long long literals.

2012-10-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20041210-1.c,
	  support/regression/tests/gcc-torture-execute-20050218-1.c,
	  support/regression/tests/gcc-torture-execute-20051110-1.c,
	  support/regression/tests/gcc-torture-execute-20041112-1.c,
	  support/regression/tests/gcc-torture-execute-20040820-1.c,
	  support/regression/tests/gcc-torture-execute-20040704-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c,
	  support/regression/tests/gcc-torture-execute-20040311-1.c,
	  support/regression/tests/gcc-torture-execute-20040319-1.c,
	  support/regression/tests/gcc-torture-execute-20051110-2.c,
	  support/regression/tests/gcc-torture-execute-20071213-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-1.c,
	  support/regression/tests/gcc-torture-execute-20070724-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-2.c,
	  support/regression/tests/gcc-torture-execute-20051021-1.c,